@@ -21,13 +21,14 @@ import com.google.gson.JsonParser;
 @WebServlet("/callback")
 public class GoogleCallbackServlet extends HttpServlet {
 
-    private static final String CLIENT_ID = "1087404832-coiq7i1ifndcqak60g34hed9ci54mlgv.apps.googleusercontent.com";
-    private static final String CLIENT_SECRET = "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";
-    private static final String REDIRECT_URI = "http://localhost:9999/FB_N1/callback";
+    private static final String CLIENT_ID = config.SecretsConfig.get("GOOGLE_CLIENT_ID");
+    private static final String CLIENT_SECRET = config.SecretsConfig.get("GOOGLE_CLIENT_SECRET");
+    private static final String REDIRECT_URI = config.SecretsConfig.get("GOOGLE_REDIRECT_URI");
     private static final String TOKEN_URL = "https://oauth2.googleapis.com/token";
     private static final String USER_INFO_URL = "https://www.googleapis.com/oauth2/v2/userinfo";
 
-    protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+    protected void doGet(HttpServletRequest request, HttpServletResponse response)
+            throws ServletException, IOException {
         String code = request.getParameter("code");
         String state = request.getParameter("state");
         String error = request.getParameter("error");
@@ -48,10 +49,10 @@ public class GoogleCallbackServlet extends HttpServlet {
         if (code != null) {
             try {
                 // Gửi yêu cầu lấy token
-                String postData = "code=" + URLEncoder.encode(code, StandardCharsets.UTF_8)
-                        + "&client_id=" + URLEncoder.encode(CLIENT_ID, StandardCharsets.UTF_8)
-                        + "&client_secret=" + URLEncoder.encode(CLIENT_SECRET, StandardCharsets.UTF_8)
-                        + "&redirect_uri=" + URLEncoder.encode(REDIRECT_URI, StandardCharsets.UTF_8)
+                String postData = "code=" + URLEncoder.encode(code, "UTF-8")
+                        + "&client_id=" + URLEncoder.encode(CLIENT_ID, "UTF-8")
+                        + "&client_secret=" + URLEncoder.encode(CLIENT_SECRET, "UTF-8")
+                        + "&redirect_uri=" + URLEncoder.encode(REDIRECT_URI, "UTF-8")
                         + "&grant_type=authorization_code";
 
                 URL url = new URL(TOKEN_URL);
@@ -66,7 +67,8 @@ public class GoogleCallbackServlet extends HttpServlet {
 
                 // Đọc phản hồi từ Google
                 StringBuilder tokenResponseData = new StringBuilder();
-                try (BufferedReader br = new BufferedReader(new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
+                try (BufferedReader br = new BufferedReader(
+                        new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
                     String line;
                     while ((line = br.readLine()) != null) {
                         tokenResponseData.append(line);
@@ -78,12 +80,14 @@ public class GoogleCallbackServlet extends HttpServlet {
                 String accessToken = tokenJson.get("access_token").getAsString();
 
                 // Gửi yêu cầu lấy thông tin người dùng
-                URL userInfoUrl = new URL(USER_INFO_URL + "?access_token=" + URLEncoder.encode(accessToken, StandardCharsets.UTF_8));
+                URL userInfoUrl = new URL(
+                        USER_INFO_URL + "?access_token=" + URLEncoder.encode(accessToken, "UTF-8"));
                 HttpURLConnection userInfoConn = (HttpURLConnection) userInfoUrl.openConnection();
                 userInfoConn.setRequestMethod("GET");
 
                 StringBuilder userInfoData = new StringBuilder();
-                try (BufferedReader br = new BufferedReader(new InputStreamReader(userInfoConn.getInputStream(), StandardCharsets.UTF_8))) {
+                try (BufferedReader br = new BufferedReader(
+                        new InputStreamReader(userInfoConn.getInputStream(), StandardCharsets.UTF_8))) {
                     String line;
                     while ((line = br.readLine()) != null) {
                         userInfoData.append(line);
@@ -94,8 +98,8 @@ public class GoogleCallbackServlet extends HttpServlet {
                 JsonObject userInfo = userInfoElement.getAsJsonObject();
 
                 // In ra toàn bộ dữ liệu userInfo dưới dạng HTML
-//                response.getWriter().println("<h2>Thông tin người dùng từ Google:</h2>");
-//                response.getWriter().println("<pre>" + userInfo.toString() + "</pre>");
+                // response.getWriter().println("<h2>Thông tin người dùng từ Google:</h2>");
+                // response.getWriter().println("<pre>" + userInfo.toString() + "</pre>");
                 // Gọi servlet đăng ký Google
                 request.setAttribute("userInfo", userInfo.toString());
                 request.getRequestDispatcher("/googleRegister").forward(request, response);
